# scr.scr_control

./: .gitignore  CMakeLists.txt  Light.py  README.md  RunServers.bash  package.xml  setup.py  startROS.py
documentation/: SCR_documentation.aux  SCR_documentation.out  SCR_documentation.tex  SCR_documentation.toc
msg/: AddressColors.msg  CCT.msg  Intensity.msg  LightChange.msg  RAGBW.msg
scripts/: PentaLight_client.py  SCR_PentaLight_CCT.txt  SCR_PentaLight_server.py  light_server.py  sample_light_client.py  sample_light_server.py
scripts/HVAC/: SCR_HVAC_client.py  SCR_HVAC_help.txt  SCR_HVAC_server.py
scripts/blinds/: SCR_blind_client.py  SCR_blind_conf.txt  SCR_blind_help.txt  SCR_blind_server.py
scripts/color_sensors/: SCR_COS_client.py  SCR_COS_help.txt  SCR_COS_read.py  SCR_COS_server.py
scripts/lights/: PentaLight_client.py  SCR_OctaLight_CCT.txt  SCR_OctaLight_client.py  SCR_OctaLight_conf.txt  SCR_OctaLight_help.txt  SCR_OctaLight_int.txt  SCR_OctaLight_server.py  SCR_PentaLight_client.py  SCR_PentaLight_conf.txt  SCR_PentaLight_help.txt  SCR_PentaLight_server.py  api.py
scripts/tests/: collect_data.py  function_timer.py  heatmap_visualizer.py  light_client.py  light_server.py  sample_light.py  test_lights.py
scripts/tests/data/: cos.txt  hvac.txt  light.txt  weather.txt
scripts/time_of_flight/: SCR_TOF_client.py  SCR_TOF_conf.txt  SCR_TOF_help.txt  SCR_TOF_server.py
scripts/utils/: utils.py
src/time_of_flight/docs/html-reference/: a00002.html  a00004.html  a00006.html  a00008.html  a00010.html  a00011.html  a00012.html  a00013.html  a00014.html  a00015.html  a00016.html  a00017.html  a00018.html  a00019.html  a00020.html  a00021.html  a00022.html  a00023.html  a00024.html  a00025.html  a00026.html  a00027.html  a00028.html  a00029.html  a00030.html  a00031.html  a00032.html  a00033.html  a00034.html  a00035.html  a00036.html  a00037.html  a00038.html  a00039.html  a00040.html  a00041.html  a00042.html  a00043.html  a00044.html  a00045.html  (+1693 more)
src/time_of_flight/docs/html-reference/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+108 more)
srv/: BlindLift.srv  BlindLiftAll.srv  BlindTilt.srv  BlindTiltAll.srv  COSInteTime.srv  COSReadAll.srv  COSReadOne.srv  GetBlinds.srv  GetCCT.srv  GetInt.srv  GetLights.srv  GetSources.srv  HVAC_GetRH.srv  HVAC_GetTemp.srv  HVAC_SetBms.srv  HVAC_SetEp.srv  HVAC_SetFanSp.srv  HVAC_SetTemp.srv  LightState.srv  OctaLight_CCT.srv  OctaLight_int.srv  OctaLight_sources.srv  OctaLight_sourcesAll.srv  PentaLight_CCT.srv  PentaLight_CCTAll.srv  PentaLight_int.srv  PentaLight_ragbw.srv  PentaLight_ragbwAll.srv  TOFGetDistances.srv  TOFSetCounting.srv  TestLightChange.srv
